Ozhaev Zaynudin Sharik4.cpp.g++log.txt
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik4.cpp: In function 'void MoveBall()':
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik4.cpp:23:24: warning: conversion to 'float' from 'int' may alter its value [-Wconversion]
     float vx1 = rand() % 10;
                        ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik4.cpp:24:24: warning: conversion to 'float' from 'int' may alter its value [-Wconversion]
     float vy1 = rand() % 10;
                        ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik4.cpp:25:24: warning: conversion to 'float' from 'int' may alter its value [-Wconversion]
     float vx2 = rand() % 10;
                        ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik4.cpp:26:24: warning: conversion to 'float' from 'int' may alter its value [-Wconversion]
     float vy2 = rand() % 10;
                        ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik4.cpp:97:34: warning: conversion to 'float' from 'double' may alter its value [-Wconversion]
        float d = sqrt(Dx*Dx+Dy*Dy); if (d == 0) d = 0.01;
                                  ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik4.cpp:97:46: warning: comparing floating point with == or != is unsafe [-Wfloat-equal]
        float d = sqrt(Dx*Dx+Dy*Dy); if (d == 0) d = 0.01;
                                              ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik4.cpp:97:51: warning: conversion to 'float' alters 'double' constant value [-Wconversion]
        float d = sqrt(Dx*Dx+Dy*Dy); if (d == 0) d = 0.01;
                                                   ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik4.cpp:101:21: error: 'dx2' was not declared in this scope
         float Vn1 = dx2*s + dy2*e;
                     ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik4.cpp:101:29: error: 'dy2' was not declared in this scope
         float Vn1 = dx2*s + dy2*e;
                             ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik4.cpp:102:21: error: 'dx1' was not declared in this scope
         float Vn2 = dx1*s + dy1*e;
                     ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik4.cpp:102:29: error: 'dy1' was not declared in this scope
         float Vn2 = dx1*s + dy1*e;
                             ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik4.cpp:104:26: warning: conversion to 'float' alters 'double' constant value [-Wconversion]
         if (dt > 0.6) dt = 0.6;
                          ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik4.cpp:105:27: warning: conversion to 'float' alters 'double' constant value [-Wconversion]
         if (dt < -0.6) dt = -0.6;
                           ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik4.cpp:112:29: warning: conversion to 'float' from 'double' may alter its value [-Wconversion]
         d = sqrt(Dx*Dx+Dy*Dy); if (d == 0) d = 0.01;
                             ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik4.cpp:112:41: warning: comparing floating point with == or != is unsafe [-Wfloat-equal]
         d = sqrt(Dx*Dx+Dy*Dy); if (d == 0) d = 0.01;
                                         ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik4.cpp:112:46: warning: conversion to 'float' alters 'double' constant value [-Wconversion]
         d = sqrt(Dx*Dx+Dy*Dy); if (d == 0) d = 0.01;
                                              ^
---------------------------------------------------------------------------------------------
[09.06.2021 17:32:50,31 C:\Users\zainu@DESKTOP-ZAINU, returned 1]
C:\Users\zainu\Desktop\курс\proekt2> g++.exe "C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik4.cpp" -o "C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik4.exe"  -Wshadow -Winit-self -Wredundant-decls -Wcast-align -Wundef -Wfloat-equal -Winline -Wunreachable-code -Wmissing-declarations -Wmissing-include-dirs -Wswitch-enum -Wswitch-default -Weffc++ -Wmain -Wextra -Wall -g -pipe -fexceptions -Wcast-qual -Wconversion -Wctor-dtor-privacy -Wempty-body -Wformat-security -Wformat=2 -Wignored-qualifiers -Wlogical-op -Wmissing-field-initializers -Wnon-virtual-dtor -Woverloaded-virtual -Wpointer-arith -Wsign-promo -Wstack-usage=8192 -Wstrict-aliasing -Wstrict-null-sentinel -Wtype-limits -Wwrite-strings -D_DEBUG -D_EJUDGE_CLIENT_SIDE -D_EJC
